# ai-interview--assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  config.py  export.py  fallback_data.py  industry_guardrail.py  llm_client.py  prompts.py  providers.py  pyproject.toml  schemas.py  scoring.py  session_state.py  timer.py
docs/: DEMO.md  PROGRESS.md  PROMPTS.md  TESTING.md  TROUBLESHOOTING.md  architecture.md  bugs.md  decisions.md  logs.md
tests/: __init__.py  conftest.py  test_edge_cases.py  test_export.py  test_industry_guardrail.py  test_llm_client.py  test_performance.py  test_phase0_smoke.py  test_providers.py  test_schemas.py  test_scoring.py  test_state_machine.py  test_timer.py
