[project]
name = "ai-interview-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.1.0",
    "openai>=1.30.0",
    "plotly>=5.20.0",
    "pydantic>=2.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "weasyprint>=61.0",
]
