[project]
name = "ai-interview-assistant"
version = "0.1.0"
description = "Personalised mock interview app powered by an OpenAI-compatible LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.1.0",
    "kaleido>=1.3.0",
    "openai>=1.30.0",
    "plotly>=5.20.0",
    "pydantic>=2.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "weasyprint>=61.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (performance benchmarks, skipped by default)",
]
